add interface to saao IO weather info

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ console_scripts =
     lco_wx = timdimm_tng.wx.lcogt_weather:main
     lco_boltwood_wx = timdimm_tng.wx.lcogt_bwc2_weather:main
     monet_wx = timdimm_tng.wx.monet_weather:main
+    saao_io = timdimm_tng.wx.saao_io:main
     check_wx = timdimm_tng.wx.check_wx:main
     timdimm = timdimm_tng.timdimm_gui:main
 
