--- a/timdimm_env.yml
+++ b/timdimm_env.yml
@@ -21,6 +21,9 @@ dependencies:
   - photutils
   - astroplan
   - xmltodict
+  - flake8
+  - fastapi
+  - uvicorn
   - pip:
     - sdbus
     - pyserial
