--- a/config/timdimm.conf
+++ b/config/timdimm.conf
@@ -10,6 +10,9 @@
         Allow from all
     </Proxy>
     
+    ProxyPass /ws/ ws://127.0.0.1:8080/ws/
+    ProxyPassReverse /ws/ ws://127.0.0.1:8080/ws/
+
     ProxyPass / http://127.0.0.1:8080/
     ProxyPassReverse / http://127.0.0.1:8080/
 
