--- a/timdimm_env.yml
+++ b/timdimm_env.yml
@@ -2,7 +2,7 @@ name: timdimm
 channels:
   - conda-forge
 dependencies:
-  - python>=3.12,<3.13
+  - python>=3.12
   - numpy>=2.0
   - scipy>=1.9
   - astropy>=7.0
